syntax = "proto3";

package cloudwalker;

import "google/api/annotations.proto";

service CDEService {
    rpc SearchStream(SearchQuery) returns(stream Optimus) {
        option (google.api.http) = {
                post:"/searchStream"
                body: "*"
        };
    }

    rpc Search(SearchQuery) returns(SearchResponse) {
        option (google.api.http) = {
                post:"/search"
                body: "*"
        };
    }

    rpc SearchText(SearchQuery) returns (SearchTextResponse) {
        option (google.api.http) = {
        post:"/searchtext"
        body: "*"
      };
    }
}

message SearchQuery{
    string query = 1;
    map<string, FilterKey> searchMeta = 2;
}

message FilterKey {
    repeated string values = 1;
}

message SearchResponse{
    repeated Optimus contentTile = 1;
}

message SearchTextResponse{
    repeated string result = 1;
}



enum Monetize {
    Free = 0;
    Paid = 1;
    Subscription = 2;
    Rent = 3;
}

enum TileType {
    ImageTile = 0;
    VideoTile = 1;
    FeatureTile = 2;
    AdvertiseTile = 3;
    CarouselTile = 4;
}

message ContentAvailable {
    Monetize monetize = 6;
    string target_id = 1;
    string source = 2;
    string package = 3;
    string type = 4;
    string target = 5;
}

message Media {
    repeated string landscape = 5;
    repeated string portrait = 1;
    repeated string backdrop = 2;
    repeated string banner = 3;
    repeated string video = 4;
}

message Content {
    bool publish_state = 3;
    bool detail_page = 1;
    repeated string sources = 2;
}

message Metadata {
    string title = 20;
    string imdb_id = 1;
    string synopsis = 2;
    repeated string country = 3;
    string runtime = 4;
    double rating = 5;
    string release_date = 6;
    repeated string tags = 7;
    int32 year = 8;
    repeated string cast = 9;
    repeated string directors = 10;
    repeated string genre = 11;
    repeated string categories = 12;
    repeated string languages = 13;
    bool kids_safe = 14;
    double view_count = 15;
    int32 season = 16;
    int32 episode = 17;
    int32 part = 18;
    repeated int32 mood = 19;
}

message Optimus {
    string ref_id = 1;
    TileType tile_type = 2;
    Content content = 3;
    Metadata metadata = 4;
    repeated ContentAvailable content_available = 5;
    Media media = 6;
}
